# emerge-api

./: .gitignore  CLAUDE.md  README.md  deploy.sh  dev.sh
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  mcp_server.py
backend/app/api/: mcp_remote.py
backend/app/auth/: bootstrap.py  create_superuser.py  deps.py  lock.py  models.py  oauth.py  passwords.py  store.py  tokens.py
backend/app/chat/: ask_user.py  log.py  permissions.py  redactor.py  sdk_settings.json  service.py  sse_context.py  stream.py  turn_registry.py
backend/app/eval/: judge.py  normalize.py  pivot.py  presence.py  run_stamp.py  score.py  types.py
backend/app/exports/: bundler.py  readme_template.py
backend/app/jobs/: __init__.py  autoresearch.py  events.py  runner.py
backend/app/match/: __init__.py  audit.py  audit_l1.py  engine.py  judge.py
backend/app/monitor/: __init__.py  __main__.py  alerter.py  config.py  monitor.py  probes.py
backend/app/provider/: __init__.py  anthropic.py  base.py  codex.py  google.py  openai.py  retry.py
backend/app/schemas/: envelope.py  experiment.py  extraction.py  job.py  locate.py  match.py  model_config.py  prompt_variant.py  reviewed.py  run.py  schema_field.py  score.py
backend/app/scripts/: scrub_chat_logs.py
backend/app/security/: keys.py
backend/app/services/: bench.py
backend/app/skills/: __init__.py  board_app.html  board_geometry.js  emerge_autoresearch.md  emerge_extractor.md  emerge_pre_label_runner.md  emerge_publish.md
backend/app/tools/: __init__.py  _result.py  ask_user.py  audit_board_render.py  audit_notes.py  audit_review.py  audit_run.py  bench.py  board_geom.py  board_view.py  docs.py  experiment.py  extract.py  fork.py  ground.py  history.py  jobs.py  locate.py  match_project.py  match_prompt.py  match_review.py  match_run.py  model.py  pre_label.py  predictions.py  project_config.py  projects.py  promote.py  prompt.py  publish.py  review_board_render.py  reviewed.py  schema.py  score.py  surface_state.py  textlayer.py  translate.py  ui_actions.py  upload_url.py  usage.py  (+1 more)
backend/app/workspace/: atomic.py  history.py  ids.py  jsonschema_transcode.py  lock.py  migrate.py  migrate_team_dirs.py  migrate_tenancy.py  orphans.py  paths.py  pid_index.py  slug.py  staging.py  trash.py
backend/scripts/: backfill_grounding.py  backfill_run_stamp.py  diagnose_doc_pipeline.py  fix_migrated_experiment_label.py  usage_report.py  verify_grounding.py  warm_textlayer.py
backend/tests/: conftest.py  e2e_seed.py
backend/tests/integration/: test_agent_allowlist.py  test_autoresearch_notes_e2e.py  test_bench_route.py  test_chat_image_block.py  test_chat_mint_from_staging.py  test_chat_rename_midstream.py  test_chat_routes_unbound.py  test_chat_service.py  test_chat_session_continuity.py  test_chat_turns_lifecycle.py  test_chat_unbound_lifecycle.py  test_eval_e2e.py  test_healthz.py  test_history_routes.py  test_lab_accept_candidate.py  test_lab_chat_flow.py  test_lab_chat_list.py  test_lab_docs_pages.py  test_lab_eval.py  test_lab_eval_smoke.py  test_lab_export.py  test_lab_fork_and_import_e2e.py  test_lab_jobs.py  test_lab_keys_meta.py  test_lab_predictions.py  test_lab_projects.py  test_lab_publish_e2e.py  test_lab_reviewed.py  test_lab_tree.py  test_lab_upload.py  test_m9_1_lazy_migration.py  test_path_traversal.py  test_publish_no_plaintext_leak.py  test_routes_experiments_setters.py  test_routes_extract_lab.py  test_routes_fork_and_import.py  test_routes_models_active_put.py  test_routes_projects_create.py  test_routes_promote_attachment.py  test_routes_prompts_activate.py  (+5 more)
backend/tests/unit/: test_anthropic_base_url.py  test_atomic.py  test_audit_board_render.py  test_audit_judge.py  test_audit_l1.py  test_audit_notes.py  test_audit_review.py  (+141 more)
(+423 files in other folders)
