[project]
name = "emerge-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "google-genai>=0.5.0",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "anyio>=4.6",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    "pymupdf>=1.24",
    "claude-agent-sdk>=0.2.87",
    "rapidfuzz>=3.0",
    "dateparser>=1.2",
    "Babel>=2.14",
    "itsdangerous>=2.2.0",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
# Hang guardrail: any test stuck >120s fails with a stack dump instead of
# silently eating the suite (2026-06-10: turns SSE tests deadlocked and full
# runs sat 1h+ at 0% CPU). "signal" CANNOT interrupt these deadlocks (the
# portal-future lock.acquire never runs Python signal handlers — verified
# empirically); "thread" fires reliably but terminates the whole pytest
# process. Therefore FULL runs must use xdist worker isolation so a hung
# test only kills its own worker and the suite completes:
#     uv run pytest -n 8 --dist loadfile -q
# Legit slow tests opt out EXPLICITLY via @pytest.mark.timeout(...) — never
# raise this global value.
timeout = 120
timeout_method = "thread"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
